--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
 		
 		<div class="logo">
 
-			<img src="images/logo.svg" alt="Logo" width=80 height=80/>
+<!-- 			<img src="images/logo.svg" alt="Logo" width=80 height=80/>
 
-		</div>
+		</div> -->
 
 		<div class="bio">
 			
-			<p>This is war.</p>
+			<p>This is <b>war.</b></p>
+		
 
 		</div>
 
